force-app/main/default/objects/Rental_Agreement__c/Rental_Agreement__c.object-meta.xml
<CustomObject>
    <label>Rental Agreement</label>
    <nameField>
        <displayFormat>Ra-{00000}</displayFormat>
        <label>Rental Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rental Agreement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>