force-app/main/default/objects/Rental_Agreement__c/fields/Rental_Unit__c.field-meta.xml
<CustomField>
    <fullName>Rental_Unit__c</fullName>
    <label>Rental Unit</label>
    <referenceTo>Rental_Unit__c</referenceTo>
    <relationshipLabel>Rental Agreement</relationshipLabel>
    <relationshipName>Rental_Agreement</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>