force-app/main/default/objects/Rental_Agreement__c/fields/Renter__c.field-meta.xml
<CustomField>
    <fullName>Renter__c</fullName>
    <label>Renter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Rental Agreement</relationshipLabel>
    <relationshipName>Rental_Agreement</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>